[package]
name = "cargo-graph"
version = "0.2.0"
authors = [
    "Kevin K. <kbknapp@gmail.com>",
    "Max New <maxsnew@gmail.com>"
]
exclude = ["*.png"]
description = "Cargo subcommand for building GraphViz DOT files of dependency graphs"
repository = "https://github.com/kbknapp/cargo-graph.git"
readme = "README.md"
license = "MIT"
keywords = ["cargo", "subcommand", "graph", "dot", "graphviz"]

[[bin]]
name = "cargo-graph"

[dependencies]
toml = "~0.1.22"
clap = "~2.2.1"
ansi_term = { version = "~0.7", optional = true }
clippy    = { version = "=0.0.55", optional = true }

[features]
default = ["color"]
color = ["ansi_term"]
unstable = ["lints"]
lints = ["nightly", "clippy"]
nightly = []
debug = []
